// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`conditions translation should translate "JavaScript expression ... equals ..." line 1`] = `
Object {
  "children": Array [
    Object {
      "label": Array [
        Object {
          "type": "text",
          "value": "JavaScript expression",
        },
      ],
      "type": "code-block",
      "value": "someJS()",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "Expression result",
                },
              ],
              "type": "cell",
            },
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "=",
                },
              ],
              "type": "cell",
            },
            Object {
              "children": Array [
                Object {
                  "type": "bold",
                  "value": "returned value",
                },
              ],
              "type": "cell",
            },
          ],
          "type": "row",
        },
      ],
      "label": undefined,
      "type": "table",
    },
  ],
  "title": Array [
    Object {
      "type": "text",
      "value": "JavaScript expression",
    },
  ],
  "type": "condition",
}
`;

exports[`conditions translation should translate "JavaScript expression with variables ... equals ..." line 1`] = `
Object {
  "children": Array [
    Object {
      "label": Array [
        Object {
          "type": "text",
          "value": "JavaScript expression",
        },
      ],
      "type": "code-block",
      "value": "someJS(\\"123\\")",
    },
    Object {
      "label": Array [
        Object {
          "type": "text",
          "value": "With variables",
        },
      ],
      "type": "code-block",
      "value": "someJS(\\"<%var1%>\\")",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "Expression result",
                },
              ],
              "type": "cell",
            },
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "=",
                },
              ],
              "type": "cell",
            },
            Object {
              "children": Array [
                Object {
                  "type": "bold",
                  "value": "returned value",
                },
              ],
              "type": "cell",
            },
          ],
          "type": "row",
        },
      ],
      "label": undefined,
      "type": "table",
    },
  ],
  "title": Array [
    Object {
      "type": "text",
      "value": "JavaScript expression",
    },
  ],
  "type": "condition",
}
`;

exports[`conditions translation should translate "PS4 video for current had no error" line 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "type": "text",
          "value": "For current source",
        },
      ],
      "type": "paragraph",
    },
  ],
  "title": Array [
    Object {
      "type": "text",
      "value": "PlayStation 4 video had no error",
    },
  ],
  "type": "condition",
}
`;

exports[`conditions translation should translate "PS4 video had no error" line 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "type": "text",
          "value": "For any source",
        },
      ],
      "type": "paragraph",
    },
  ],
  "title": Array [
    Object {
      "type": "text",
      "value": "PlayStation 4 video had no error",
    },
  ],
  "type": "condition",
}
`;

exports[`conditions translation should translate "PS4 video has props" line 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "width",
                },
              ],
              "type": "cell",
            },
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "=",
                },
              ],
              "type": "cell",
            },
            Object {
              "children": Array [
                Object {
                  "type": "bold",
                  "value": "123",
                },
              ],
              "type": "cell",
            },
          ],
          "type": "row",
        },
      ],
      "label": undefined,
      "type": "table",
    },
  ],
  "title": Array [
    Object {
      "type": "bold",
      "value": "PlayStation 4 video",
    },
    Object {
      "type": "text",
      "value": " properties",
    },
  ],
  "type": "condition",
}
`;

exports[`conditions translation should translate "application has exited" line 1`] = `
Object {
  "children": Array [],
  "title": Array [
    Object {
      "type": "text",
      "value": "Application has exited",
    },
  ],
  "type": "condition",
}
`;

exports[`conditions translation should translate "cookie" line 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "type": "bold",
                  "value": "my-cookie",
                },
                Object {
                  "type": "text",
                  "value": " cookie",
                },
              ],
              "type": "cell",
            },
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "!=",
                },
              ],
              "type": "cell",
            },
            Object {
              "children": Array [
                Object {
                  "type": "bold",
                  "value": "expecte value",
                },
              ],
              "type": "cell",
            },
          ],
          "type": "row",
        },
      ],
      "label": undefined,
      "type": "table",
    },
  ],
  "title": Array [
    Object {
      "type": "text",
      "value": "Cookie",
    },
  ],
  "type": "condition",
}
`;

exports[`conditions translation should translate "current location" line 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "Current location",
                },
              ],
              "type": "cell",
            },
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "contains",
                },
              ],
              "type": "cell",
            },
            Object {
              "children": Array [
                Object {
                  "type": "bold",
                  "value": "expected value",
                },
              ],
              "type": "cell",
            },
          ],
          "type": "row",
        },
      ],
      "label": undefined,
      "type": "table",
    },
  ],
  "title": Array [
    Object {
      "type": "text",
      "value": "Current location",
    },
  ],
  "type": "condition",
}
`;

exports[`conditions translation should translate "element ... does not exist" line 1`] = `
Object {
  "children": Array [],
  "title": Array [
    Object {
      "type": "bold",
      "value": "Element 1",
    },
    Object {
      "type": "text",
      "value": " does not exist",
    },
  ],
  "type": "condition",
}
`;

exports[`conditions translation should translate "element ... is visible" line 1`] = `
Object {
  "children": Array [],
  "title": Array [
    Object {
      "type": "bold",
      "value": "My element",
    },
    Object {
      "type": "text",
      "value": " is visible",
    },
  ],
  "type": "condition",
}
`;

exports[`conditions translation should translate "element matches JS with vars" line 1`] = `
Object {
  "children": Array [
    Object {
      "label": Array [
        Object {
          "type": "text",
          "value": "JavaScript matcher",
        },
      ],
      "type": "code-block",
      "value": "someJS(\\"123\\");",
    },
    Object {
      "label": Array [
        Object {
          "type": "text",
          "value": "With variables",
        },
      ],
      "type": "code-block",
      "value": "someJS(\\"<%var1%>\\");",
    },
  ],
  "title": Array [
    Object {
      "type": "code",
      "value": "{\\"css\\":\\".some.class\\",\\"xpath\\":\\"//div\\",\\"index\\":1}",
    },
    Object {
      "type": "text",
      "value": " matches JavaScript",
    },
  ],
  "type": "condition",
}
`;

exports[`conditions translation should translate "element matches JS" line 1`] = `
Object {
  "children": Array [
    Object {
      "label": Array [
        Object {
          "type": "text",
          "value": "JavaScript matcher",
        },
      ],
      "type": "code-block",
      "value": "someJS();",
    },
  ],
  "title": Array [
    Object {
      "type": "code",
      "value": "{\\"css\\":\\".some.class\\",\\"xpath\\":\\"//div\\",\\"index\\":1}",
    },
    Object {
      "type": "text",
      "value": " matches JavaScript",
    },
  ],
  "type": "condition",
}
`;

exports[`conditions translation should translate "element properties" line 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "video position",
                },
              ],
              "type": "cell",
            },
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": ">=",
                },
              ],
              "type": "cell",
            },
            Object {
              "children": Array [
                Object {
                  "type": "bold",
                  "value": "123",
                },
              ],
              "type": "cell",
            },
          ],
          "type": "row",
        },
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "height",
                },
              ],
              "type": "cell",
            },
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "=",
                },
              ],
              "type": "cell",
            },
            Object {
              "children": Array [
                Object {
                  "type": "bold",
                  "value": "123 ± 3v5",
                },
                Object {
                  "type": "text",
                  "value": " (",
                },
                Object {
                  "type": "code",
                  "value": "123 ± <%var3%>",
                },
                Object {
                  "type": "text",
                  "value": ")",
                },
              ],
              "type": "cell",
            },
          ],
          "type": "row",
        },
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "text",
                },
              ],
              "type": "cell",
            },
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "contains",
                },
              ],
              "type": "cell",
            },
            Object {
              "children": Array [
                Object {
                  "type": "bold",
                  "value": "expected text",
                },
              ],
              "type": "cell",
            },
          ],
          "type": "row",
        },
      ],
      "label": undefined,
      "type": "table",
    },
  ],
  "title": Array [
    Object {
      "type": "text",
      "value": "Unknown element (",
    },
    Object {
      "type": "code",
      "value": "unkn...n-id",
    },
    Object {
      "type": "text",
      "value": ") properties",
    },
  ],
  "type": "condition",
}
`;

exports[`conditions translation should translate "element with legacy name exists" line 1`] = `
Object {
  "children": Array [],
  "title": Array [
    Object {
      "type": "bold",
      "value": "Foo Bar",
    },
    Object {
      "type": "text",
      "value": " exists",
    },
  ],
  "type": "condition",
}
`;

exports[`conditions translation should translate "element with name hint exists" line 1`] = `
Object {
  "children": Array [],
  "title": Array [
    Object {
      "type": "bold",
      "value": "Foo Bar",
    },
    Object {
      "type": "text",
      "value": " exists",
    },
  ],
  "type": "condition",
}
`;

exports[`conditions translation should translate "element with single selector exists" line 1`] = `
Object {
  "children": Array [],
  "title": Array [
    Object {
      "type": "code",
      "value": "#fooBar",
    },
    Object {
      "type": "text",
      "value": " exists",
    },
  ],
  "type": "condition",
}
`;

exports[`conditions translation should translate "network request matching URL was not made excluding previously matched" line 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "URL matching",
                },
              ],
              "type": "cell",
            },
            Object {
              "children": Array [
                Object {
                  "type": "bold",
                  "value": "/partial/url/123",
                },
                Object {
                  "type": "text",
                  "value": " (",
                },
                Object {
                  "type": "code",
                  "value": "/partial/url/<%var1%>",
                },
                Object {
                  "type": "text",
                  "value": ")",
                },
              ],
              "type": "cell",
            },
          ],
          "type": "row",
        },
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "Previously matched",
                },
              ],
              "type": "cell",
            },
            Object {
              "children": Array [
                Object {
                  "type": "bold",
                  "value": "No",
                },
              ],
              "type": "cell",
            },
          ],
          "type": "row",
        },
      ],
      "label": undefined,
      "type": "dictionary",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "Request method",
                },
              ],
              "type": "cell",
            },
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "=",
                },
              ],
              "type": "cell",
            },
            Object {
              "children": Array [
                Object {
                  "type": "bold",
                  "value": "GET",
                },
              ],
              "type": "cell",
            },
          ],
          "type": "row",
        },
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "Request header ",
                },
                Object {
                  "type": "bold",
                  "value": "Accept-Type",
                },
              ],
              "type": "cell",
            },
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "contains",
                },
              ],
              "type": "cell",
            },
            Object {
              "children": Array [
                Object {
                  "type": "bold",
                  "value": "text/javascript",
                },
              ],
              "type": "cell",
            },
          ],
          "type": "row",
        },
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "Request body",
                },
              ],
              "type": "cell",
            },
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "=",
                },
              ],
              "type": "cell",
            },
            Object {
              "children": Array [
                Object {
                  "type": "bold",
                  "value": "request val2 body",
                },
                Object {
                  "type": "text",
                  "value": " (",
                },
                Object {
                  "type": "code",
                  "value": "request <%var2%> body",
                },
                Object {
                  "type": "text",
                  "value": ")",
                },
              ],
              "type": "cell",
            },
          ],
          "type": "row",
        },
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "Response status",
                },
              ],
              "type": "cell",
            },
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": ">",
                },
              ],
              "type": "cell",
            },
            Object {
              "children": Array [
                Object {
                  "type": "bold",
                  "value": "123",
                },
              ],
              "type": "cell",
            },
          ],
          "type": "row",
        },
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "Response header ",
                },
                Object {
                  "type": "bold",
                  "value": "Content-123",
                },
                Object {
                  "type": "text",
                  "value": " (",
                },
                Object {
                  "type": "code",
                  "value": "Content-<%var1%>",
                },
                Object {
                  "type": "text",
                  "value": ")",
                },
              ],
              "type": "cell",
            },
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "ends with",
                },
              ],
              "type": "cell",
            },
            Object {
              "children": Array [
                Object {
                  "type": "bold",
                  "value": "val2/javascript",
                },
                Object {
                  "type": "text",
                  "value": " (",
                },
                Object {
                  "type": "code",
                  "value": "<%var2%>/javascript",
                },
                Object {
                  "type": "text",
                  "value": ")",
                },
              ],
              "type": "cell",
            },
          ],
          "type": "row",
        },
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "Response body",
                },
              ],
              "type": "cell",
            },
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "=",
                },
              ],
              "type": "cell",
            },
            Object {
              "children": Array [
                Object {
                  "type": "bold",
                  "value": "response <%non_existing_var%> <%kind-of|var but not%> body",
                },
              ],
              "type": "cell",
            },
          ],
          "type": "row",
        },
      ],
      "label": Array [
        Object {
          "type": "text",
          "value": "Network request properties",
        },
      ],
      "type": "table",
    },
  ],
  "title": Array [
    Object {
      "type": "text",
      "value": "Network request was not made",
    },
  ],
  "type": "condition",
}
`;

exports[`conditions translation should translate "network request to URL was made including matched" line 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "Exact URL",
                },
              ],
              "type": "cell",
            },
            Object {
              "children": Array [
                Object {
                  "type": "bold",
                  "value": "http://suite.st/123",
                },
                Object {
                  "type": "text",
                  "value": " (",
                },
                Object {
                  "type": "code",
                  "value": "http://suite.st/<%var1%>",
                },
                Object {
                  "type": "text",
                  "value": ")",
                },
              ],
              "type": "cell",
            },
          ],
          "type": "row",
        },
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "Previously matched",
                },
              ],
              "type": "cell",
            },
            Object {
              "children": Array [
                Object {
                  "type": "bold",
                  "value": "Yes",
                },
              ],
              "type": "cell",
            },
          ],
          "type": "row",
        },
      ],
      "label": undefined,
      "type": "dictionary",
    },
  ],
  "title": Array [
    Object {
      "type": "text",
      "value": "Network request was made",
    },
  ],
  "type": "condition",
}
`;

exports[`conditions translation should translate "video exists" line 1`] = `
Object {
  "children": Array [],
  "title": Array [
    Object {
      "type": "bold",
      "value": "video",
    },
    Object {
      "type": "text",
      "value": " exists",
    },
  ],
  "type": "condition",
}
`;
